<resources>
    <string name="app_name">Mamanguo</string>
    <string name="btn_SetLocation">Enter Location</string>

    <string name="mapViewActLabel">Enter your location</string>
    <string name="enterEstate">Enter your estate name</string>

    <string name="bill_total_value">Bill total: 0</string>
    <string name="checkoutActLabel">Summary</string>
    <string name="btn_checkout">Make request</string>
    <string name="find_mamanguo">Find Laundry Lady</string>
    <string name="my_history">My History</string>
    <string name="default_subtotal">Subtotal: 0</string>
    <string name="my_location">My location</string>
    <string name="new_subtotal">Subtotal: %d</string>
    <string name="pick_laundry_lady">Pick a Laundry Lady</string>
    <string name="google_maps_api_key">AIzaSyB4ccf06z359cXr_DaggWwraN5i_OKfeh4</string>
    <string name="shirt">Shirts</string>
    <string name="t_shirt">T-shirts</string>
    <string name="trousers">Trousers</string>
    <string name="shorts">Shorts</string>
    <string name="skirt">Skirts</string>
    <string name="jeans">Jeans</string>
    <string name="dresses">Dresses</string>
    <string name="leather_shoes">Leather Shoes</string>
    <string name="sport_shoes">Sport Shoes</string>
    <string name="price_per_pair">Price per pair</string>
    <string name="price_per_item">Price per item</string>
    <string name="quantity">Quantity</string>
    <string name="bill_total_toast">Bill total: %d</string>
    <string name="enter_your_verification_pin">Enter your verification pin</string>
    <string name="phone_number_hint">Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="code_resend">Didn\'t receive the code? Click here to resend</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last name</string>
    <string name="email_address_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="login_link_label">Already a member? Login</string>
    <string name="logo_text">Logo</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">My profile</string>
    <string name="no_account_label">No account yet? Create one</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_btn">Login</string>
    <string name="select_country_hint">Select your country</string>
    <string name="country_code_hint">Country code</string>
    <string name="title_activity_services">My order</string>
    <string name="tab_text_1">Tops</string>
    <string name="tab_text_2">Bottoms</string>
    <string name="tab_text_3">Full Body</string>
    <string name="tab_text_4">Shoes</string>
    <string name="tab_text_5">Accessories</string>
    <string name="sweater">Sweater</string>
    <string name="blouse">Blouse</string>
    <string name="scarves">Scarves</string>
    <string name="socks">Socks</string>
    <string name="ties">Ties</string>
    <string name="jumpsuit">Jumpsuit</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="item_header">Item</string>
    <string name="unit_price_header">Unit Price</string>
    <string name="subtotal_header">Subtotal</string>
    <string name="quantity_header">Quantity</string>
    <string name="summary_title">Order Summary</string>
    <string name="grand_total_text">GRAND TOTAL</string>
    <string name="update_profile">Update Profile</string>
    <string name="phone_number_label">Phone number</string>
    <string name="my_profile_title">My profile</string>
    <string name="referral_subtitle_text">Help a friend in need to get a reliable Laundry Lady</string>
    <string name="referral_title_text">Make a referral</string>
    <string name="order_title_ext">Make an order</string>
    <string name="make_order_subtitle_text">Find a laundry lady on demand in three easy steps.</string>
    <string name="log_out_cardView_text">LOG OUT</string>
    <string name="referral_card_title">Make a referral</string>
    <string name="order_card_subtitle">Find a laundry lady on demand in three easy steps.</string>
    <string name="order_card_title">Make an order</string>
    <string name="referral_card_subtitle">Help a friend in need find a reliable laundry lady</string>
    <string name="update_profile_btn">Update profile</string>
    <string name="mamanguo_rating">Rating: %.2f</string>
    <string name="mamanguo_name">Served by</string>
    <string name="comment_label">Comment</string>
    <string name="rateActionText">RATE</string>
</resources>
