<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/summary_title"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:stretchColumns="*"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp">

        <TableRow
            android:id="@+id/headerRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_header" />

            <TextView
                android:id="@+id/unit_price_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_price_header" />

            <TextView
                android:id="@+id/quantity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_header" />

            <TextView
                android:id="@+id/subtotal_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal_header" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/make_request_btn"
        style="@style/btn_next"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_checkout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>